<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rda_ros</name>
  <version>0.0.0</version>
  <description>the ros2 implementation of rda</description>
  <maintainer email="han@todo.todo">han</maintainer>
  <maintainer email="kevinladlee@gmail.com">KevinLADLee</maintainer>

  <license>GPLv2</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>costmap_converter_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
